给遮罩层增加样式:style="background-attachment: fixed;background-repeat: no-repeat;background-position: center;position: absolute;z-index: 99999;width: 100%;"

--- a/src/main/webapp/WEB-INF/static/css/qinli/common.css
+++ b/src/main/webapp/WEB-INF/static/css/qinli/common.css
@@ -508,7 +508,7 @@ body {
     color: #646464;
     line-height: 48px;
     display: inline-block;
-    width: 425px;
+    width: 423px;
     float: left;
 }
 
